Fix issue with nav sub menu overlapping image on homepage

--- a/web/app/themes/radcliffe/style.css
+++ b/web/app/themes/radcliffe/style.css
@@ -1761,6 +1761,7 @@ li.comment {
 
 .kt-row-column-wrap {
   padding: 0;
+  z-index: 0;
 }
 
 /* Home - latest news -------------------------------------- */
